--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <section id="home" class="hero">
-            <img src="ProfilePic.JPG" alt="Hamza Iftikhar Bhatti" class="profile-img">
+            <img src="ProfilePic.jpg" alt="Hamza Iftikhar Bhatti" class="profile-img">
             <h1>Hamza Iftikhar Bhatti</h1>
             <h2>Computer Science Student</h2>
             <p>I'm a 3rd-year CS student at FAST National University of Computer and Emerging Sciences, passionate about software development and problem solving.</p>
