--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
     <footer>
         <p>© 2025 Hamza Iftikhar Bhatti. All rights reserved.</p>
         <div class="social-links">
-            <a href="#"><i class="fab fa-github"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/Hamza-Bhatti07"><i class="fab fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/hamza-iftikhar-bhatti"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
         </div>
     </footer>
